[gd_scene load_steps=23 format=3 uid="uid://df8axxfjajflr"]

[ext_resource type="Script" path="res://GameScenes/Hud/Hud.gd" id="1_5xg12"]
[ext_resource type="FontFile" uid="uid://bgiwhqyxedr1e" path="res://Scenes/VCR_OSD_MONO_1.001.ttf" id="2_8bptl"]
[ext_resource type="Texture2D" uid="uid://bip3wivpe0ioq" path="res://Assets/ui/kenney_ui-pack-rpg-expansion/PNG/barBack_horizontalMid.png" id="2_guypf"]
[ext_resource type="Texture2D" uid="uid://cm7d38bgaujtj" path="res://Assets/ui/kenney_ui-pack-rpg-expansion/PNG/buttonLong_beige.png" id="2_uhi5p"]
[ext_resource type="Texture2D" uid="uid://crxml2f10nb5d" path="res://Assets/ui/kenney_ui-pack-rpg-expansion/PNG/buttonLong_beige_pressed.png" id="3_4qyqn"]
[ext_resource type="Texture2D" uid="uid://b3mph0u2m37bc" path="res://Assets/ui/kenney_ui-pack-rpg-expansion/PNG/barGreen_horizontalMid.png" id="4_0l00e"]
[ext_resource type="FontFile" uid="uid://1ojtwle8iohy" path="res://VCR_OSD_MONO_1.001.ttf" id="6_4v8gh"]
[ext_resource type="Texture2D" uid="uid://b2w7djuhw3cqg" path="res://Assets/ui/kenney_inputPromptsPixel16×/Tiles/tile_0078.png" id="8_c48d4"]
[ext_resource type="Texture2D" uid="uid://4r011yhjj3gr" path="res://Assets/Sprites/AtelierMagicae_GemsMineralsFreebsVol1_Border.png" id="8_epdqc"]
[ext_resource type="Texture2D" uid="uid://gmwr7hgx03xk" path="res://Assets/ui/kenney_inputPromptsPixel16×/Tiles/tile_0235.png" id="9_qgjgf"]
[ext_resource type="Texture2D" uid="uid://bcglrl10uyqk3" path="res://Assets/ui/kenney_inputPromptsPixel16×/Tiles/tile_0236.png" id="10_3o64f"]
[ext_resource type="Texture2D" uid="uid://icxfxkf4mk1j" path="res://Assets/ui/kenney_inputPromptsPixel16×/Tiles/tile_0237.png" id="11_l8rkl"]
[ext_resource type="Texture2D" uid="uid://bdwewsro7aqx0" path="res://Assets/ui/kenney_inputPromptsPixel16×/Tiles/tile_0342.png" id="12_d1f6y"]
[ext_resource type="Texture2D" uid="uid://dj7vitptot3yo" path="res://Assets/Sprites/Sword 01.png" id="13_8ovhv"]
[ext_resource type="Texture2D" uid="uid://cwbkcse55hpbm" path="res://Assets/ui/kenney_inputPromptsPixel16×/Tiles/tile_0077.png" id="13_fdmv6"]
[ext_resource type="Texture2D" uid="uid://dnl0ts0ufnb3i" path="res://Assets/ui/kenney_inputPromptsPixel16×/Tiles/tile_0128.png" id="14_nb3r1"]
[ext_resource type="Texture2D" uid="uid://fjstkv8rdyjf" path="res://Assets/ui/kenney_inputPromptsPixel16×/Tiles/tile_0343.png" id="15_t303e"]

[sub_resource type="Gradient" id="Gradient_xjtbo"]
offsets = PackedFloat32Array(0, 0.485119, 0.747024, 1)
colors = PackedColorArray(0, 0, 0, 0.392157, 0.208843, 0.208843, 0.208843, 0.310258, 0.508929, 0.508929, 0.508929, 0.192577, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vfh4j"]
gradient = SubResource("Gradient_xjtbo")
fill_from = Vector2(0.484848, 0.645022)
fill_to = Vector2(0.484848, 0.00865801)

[sub_resource type="AtlasTexture" id="AtlasTexture_1acn1"]
atlas = ExtResource("8_epdqc")
region = Rect2(143, 66, 49, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8kwl"]
atlas = ExtResource("8_epdqc")
region = Rect2(76, 67, 49, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_fudw1"]
atlas = ExtResource("13_8ovhv")
region = Rect2(75.1164, 201.108, 21.2017, 20.5432)

[node name="hud" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_5xg12")

[node name="game_over" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="game_over"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="game_over"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -13.0
offset_right = 42.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8bptl")
theme_override_font_sizes/font_size = 32
text = "Teils a succombé ..."

[node name="TextureButton" type="TextureButton" parent="game_over"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -179.0
offset_right = 97.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("2_uhi5p")
texture_pressed = ExtResource("3_4qyqn")

[node name="Label" type="Label" parent="game_over/TextureButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -12.5
offset_right = 21.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "Recommencer"

[node name="ingame_ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="lifebar" type="TextureProgressBar" parent="ingame_ui"]
layout_mode = 1
offset_left = 15.0
offset_top = 24.0
offset_right = 498.0
offset_bottom = 42.0
nine_patch_stretch = true
texture_under = ExtResource("2_guypf")
texture_progress = ExtResource("4_0l00e")

[node name="hint_label" type="Label" parent="ingame_ui/lifebar"]
texture_filter = 1
layout_mode = 0
offset_left = 497.526
offset_top = -3.83405
offset_right = 537.526
offset_bottom = 22.166
text = "-10"

[node name="mentalhealthbar" type="TextureProgressBar" parent="ingame_ui"]
layout_mode = 1
offset_left = 16.0
offset_top = 53.0
offset_right = 499.0
offset_bottom = 71.0
nine_patch_stretch = true
texture_under = ExtResource("2_guypf")
texture_progress = ExtResource("4_0l00e")
tint_progress = Color(1, 0.168627, 1, 1)

[node name="hint_label" type="Label" parent="ingame_ui/mentalhealthbar"]
texture_filter = 1
layout_mode = 0
offset_left = 497.367
offset_top = -3.79044
offset_right = 537.367
offset_bottom = 22.2096
text = "-10"

[node name="dialogbox" type="Control" parent="ingame_ui"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ingame_ui/dialogbox"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -251.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_vfh4j")

[node name="MarginContainer" type="MarginContainer" parent="ingame_ui/dialogbox"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -146.0
offset_right = -2.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="Label" type="Label" parent="ingame_ui/dialogbox/MarginContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_4v8gh")
theme_override_font_sizes/font_size = 32
text = "Test"
autowrap_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ingame_ui/dialogbox"]

[node name="controls_helper" type="Control" parent="ingame_ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="toggle_world_control" type="Control" parent="ingame_ui/controls_helper"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = 57.0
offset_right = -7.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToggleWorldLabel" type="Label" parent="ingame_ui/controls_helper/toggle_world_control"]
texture_filter = 1
layout_mode = 0
offset_left = 1024.0
offset_top = 23.0
offset_right = 1137.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("6_4v8gh")
text = "toggle world"

[node name="CanToggleWorldSprite" type="TextureRect" parent="ingame_ui/controls_helper/toggle_world_control"]
visible = false
modulate = Color(1, 0.0588235, 1, 1)
layout_mode = 0
offset_left = 990.0
offset_top = 19.0
offset_right = 1039.0
offset_bottom = 78.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_1acn1")

[node name="CannotToggleWorldSprite" type="TextureRect" parent="ingame_ui/controls_helper/toggle_world_control"]
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 990.0
offset_top = 19.0
offset_right = 1039.0
offset_bottom = 77.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_t8kwl")

[node name="Help" type="Control" parent="ingame_ui/controls_helper/toggle_world_control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1014.0
offset_top = 32.0
offset_right = 1054.0
offset_bottom = 72.0

[node name="RightMouseButton" type="TextureRect" parent="ingame_ui/controls_helper/toggle_world_control/Help"]
layout_mode = 0
offset_left = 16.0
offset_top = 14.0
offset_right = 40.0
offset_bottom = 37.0
texture = ExtResource("8_c48d4")

[node name="SpaceBar" type="HBoxContainer" parent="ingame_ui/controls_helper/toggle_world_control/Help"]
layout_mode = 0
offset_left = 41.0
offset_top = 19.0
offset_right = 89.0
offset_bottom = 35.0
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 0
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="ingame_ui/controls_helper/toggle_world_control/Help/SpaceBar"]
layout_mode = 2
texture = ExtResource("9_qgjgf")

[node name="TextureRect2" type="TextureRect" parent="ingame_ui/controls_helper/toggle_world_control/Help/SpaceBar"]
layout_mode = 2
texture = ExtResource("10_3o64f")

[node name="TextureRect3" type="TextureRect" parent="ingame_ui/controls_helper/toggle_world_control/Help/SpaceBar"]
layout_mode = 2
texture = ExtResource("11_l8rkl")

[node name="X btn" type="TextureRect" parent="ingame_ui/controls_helper/toggle_world_control/Help"]
layout_mode = 0
offset_left = 81.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 35.0
texture = ExtResource("12_d1f6y")

[node name="attack_control" type="Control" parent="ingame_ui/controls_helper"]
texture_filter = 1
anchors_preset = 0
offset_left = 849.0
offset_top = 35.0
offset_right = 849.0
offset_bottom = 35.0

[node name="AttackLabel" type="Label" parent="ingame_ui/controls_helper/attack_control"]
layout_mode = 0
offset_left = 20.0
offset_top = -12.0
offset_right = 60.0
offset_bottom = 11.0
text = "attack"

[node name="CanAttackSprite" type="TextureRect" parent="ingame_ui/controls_helper/attack_control"]
layout_mode = 0
offset_left = -7.0
offset_top = -11.0
offset_right = 14.0
offset_bottom = 9.0
scale = Vector2(1.27498, 1.27498)
texture = SubResource("AtlasTexture_fudw1")

[node name="Help" type="Control" parent="ingame_ui/controls_helper/attack_control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftMouseButton" type="TextureRect" parent="ingame_ui/controls_helper/attack_control/Help"]
layout_mode = 0
offset_left = 77.0
offset_top = -10.0
offset_right = 101.0
offset_bottom = 13.0
texture = ExtResource("13_fdmv6")

[node name="L key" type="TextureRect" parent="ingame_ui/controls_helper/attack_control/Help"]
layout_mode = 0
offset_left = 100.0
offset_top = -10.0
offset_right = 121.0
offset_bottom = 11.0
texture = ExtResource("14_nb3r1")

[node name="Square btn" type="TextureRect" parent="ingame_ui/controls_helper/attack_control/Help"]
layout_mode = 0
offset_left = 123.0
offset_top = -9.0
offset_right = 142.0
offset_bottom = 10.0
texture = ExtResource("15_t303e")

[node name="low_life_timer" type="Timer" parent="ingame_ui"]

[node name="GlobalSounds" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="game_over/TextureButton" to="." method="_on_game_over_retry_pressed"]
[connection signal="timeout" from="ingame_ui/low_life_timer" to="." method="_on_low_life_timer_timeout"]
